--- a/movie/templates/about.html
+++ b/movie/templates/about.html
@@ -8,9 +8,9 @@
 <!--carousel section-->
 <div class="container mt-5">
   <div class="about-page">
-    <h1>About Movie Reviewer</h1>
+    <h1>About Mini Netflix  </h1>
     
-    <p>Welcome to <strong>Movie Reviewer</strong>, your ultimate companion for discovering, rating, and sharing movie experiences! Whether you're a casual viewer or a dedicated cinephile, our platform is designed to make your movie-watching journey more engaging and enjoyable.</p>
+    <p>Welcome to <strong>Mini Netflix</strong>, your ultimate companion for discovering, rating, and sharing movie experiences! Whether you're a casual viewer or a dedicated cinephile, our platform is designed to make your movie-watching journey more engaging and enjoyable.</p>
     
     <h2>Key Features:</h2>
     <ul>
