--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 <!--carousel section-->
-
   {% load static %}
   <div class='p-0 m-0'>
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'images/movie.png' %} " class="d-block w-100" width="100%" height="50%" alt="picture">
-      </div>
 
-      
-      
+        <img src="{% static 'images/movie.png' %} " class="d-block w-100" width="100%" height="50%" alt="picture">
+      </div>      
       <div class="carousel-item">
-        <img src="{% static 'images/movie_2.png' %} " class="d-block w-100" alt="picture">
+    
+    <img src="{% static 'images/movie_6.jpg' %} " class="d-block w-100" alt="picture">
+      <div class="container bg-white text-black"><h1>Welcome Home</h1></div>
       </div>
 
       <div class="carousel-item">
@@ -44,49 +44,41 @@
   </div>
 </div>
 <!--carousel section-->
-<div class="container mt-5">
+<div class="mt-4 bg-dark">
 <form action="">
   <div class="mb-3">
-    <h2><label class="form-label">Search for Movie:</label></h2>
+      <div class="container text-white fs-4 pt-3">      
+        Movies move us like nothing else can, whether they’re scary, funny, dramatic, romantic or anywhere in-between.
+         So many titles, so much to experience.
+      </div>    
     <input
       type="text"
       placeholder="Please enter the title of the movie to search for ..."
       required
       name="searchMovie"
-      class="form-control"
+      class="form-control fs-5 pl-5"
     />
   </div>
-  <button type="submit" class="btn btn-primary">Search</button>
+  <button type="submit" class="btn btn-primary fs-5 bg-white text-dark">Search</button>
 </form>
-
-
-
 <p>Searching for: {{ searchTerm }}</p>
-<div class="container">
-
-
+<div class="container text-white">
   <span id="element"></span>
-
   <!-- Load library from the CDN -->
-
   <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['<h2 id="element" class="text-center element animate__animated animate__pulse animate__infinite    animate__animated animate__bounce">Welcome to Movies Minder</h2> ',
-       ' <h2 id="element" class="text-center element animate__animated animate__pulse animate__infinite    animate__animated animate__bounce">Search for Movies</h2>'],
-       
-       
-      typeSpeed: 50,
+      strings: ['<h2 id="element" class="text-center element animate__animated animate__pulse animate__infinite    animate__animated animate__bounce">Welcome to Mini Netflix</h2> ',
+       ' <h2 id="element" class="text-center element animate__animated animate__pulse animate__infinite    animate__animated animate__bounce">Search for Movies, Watch, and Rate</h2>'],
+      typeSpeed: 100,
       loop:true
     });
   </script>
 
-
-
 </div>
-<div class="row row-cols-1 row-cols-md-3 g-4 ">
+<div class="row row-cols-1 row-cols-md-5 g-3">
   {% for movie in movies %}
-      <div class="col ">
+      <div class="col">
       <div class="card card-2">
         <img class="card-img-top" src="{{ movie.image.url }}" />
         <div class="card-body">
@@ -102,7 +94,6 @@
       </div>
     {% endfor %}
 </div>
-
 </div>
 
 {% endblock %}
