--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Movies App</title>
+    <title>Mini NetFlix Movies </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,30 +12,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
-    <style> 
-   
+    <style>    
       .card-2:hover {
         transform: scale(1.05);
         transition: all 0.3s ease;
-    }
-    
-      </style>
-
-
+        
+      }
+      .hover::hover {
+        background-color: white;
+      }
+    </style>
       <!-- Include Animate.css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-
-
-
  </head>
   <header>
-    <nav class="navbar navbar-expand-lg   pt-2  bg-light nav-me ">        
-      <div class="container">
+    <nav class="navbar navbar-expand-lg   pt-2 bg-dark nav-me  text-danger">        
+      <div class="container " style=" font-weight: bold">
          <a class="navbar-brand text-decoration-none" href="{% url 'home' %}">
           {% load static %}
-            <img src="{% static 'images/movie.jpg' %} " alt="" width="30" height="24" class="d-inline-block align-text-top"/>
-          <p style="text-decoration:none;">Movie Minder</p>
+            <img class="rounded" src="{% static 'images/brand.png' %} " alt="" width="30" height="24" class="d-inline-block align-text-top"/>
+          <p style="text-decoration:none; font-weight: bold;" class="text-danger fs-4">Mini Netflix</p>
          </a>
          <button class="navbar-toggler" type="button"
           data-bs-toggle="collapse"
@@ -47,17 +43,19 @@
           </button>
           <div class="collapse navbar-collapse"
           id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto text-decoration-none">
-          <a class="nav-link  fs-4 " href="{% url 'news' %}">News</a> 
-          <a class="nav-link  fs-4 " href="{% url 'about' %}">About</a> 
-          <a class="nav-link fs-4 " href="{% url 'contact' %}">Contact Us</a> 
+          <div class="navbar-nav ms-auto text-decoration-none hover">
+          <a class="nav-link  fs-4 text-danger" href="{% url 'news' %}">News</a> 
+          <a class="nav-link  fs-4 text-danger" href="{% url 'about' %}">About</a> 
+          <a class="nav-link fs-4 text-danger" href="{% url 'contact' %}">Contact Us</a> 
 
           {% if user.is_authenticated %}
-            <a class="nav-link fs-4" href="{% url 'logoutaccount' %}">Logout ({{ user.username }})</a>
+            <a class="nav-link fs-4 text-danger" href="{% url 'logoutaccount' %}">
+              Logout Hi {{ user.username }}!
+            </a>
 
           {% else %}
-            <a class="nav-link fs-4 " href="{% url 'loginaccount' %}">Login</a> 
-            <a class="nav-link fs-4 " href="{% url 'signupaccount' %}">Sign Up</a>
+            <a class="nav-link fs-4 text-danger" href="{% url 'loginaccount' %}">Login</a> 
+            <a class="nav-link fs-4 text-danger" href="{% url 'signupaccount' %}">Sign Up</a>
           {% endif %}
 
           </div>
@@ -66,27 +64,42 @@
       </nav> 
   </header>
   <body> 
-       <div>
+       <div >
           {% block content %}
           {% endblock content %}
         </div>
-
-       
-      <footer class="text-decoration-none">
+      <footer class="text-decoration-none pt-4">
       <div class="card text-center bg-dark text-light">     
       <div class="card-body">     
       <div class="card-footer text-body-secondary">
        <ul style="list-style-type:none" class="container"> 
         <p><a class="text-reset fw-bold text-decoration-none"
-          target="_blank"
-          href="https://twitter.com/sumailaayamba">Sumaila Ayamba</a></p>
-       <span> Email :<li>sumailaayamba16@gmail.com</li></span>
+          href="#">Sumaila Ayamba</a></p>
+       <span> Email :<li>sumailaayamba12@gmail.com</li></span>
        <p><span> Address: <li>H/N 34, Adag, Accra</li></span></p>
        <p><span> Phone: <li>+23355102838</li></span></p>
        </ul>
       </div>
-    </div>  
-  </footer>
+    </div> 
+    
+    <div class="container">
+      <ul style="list-style-type: none;">
+        <p>
+          <a class="fs-5 text-reset fw-bold text-decoration-none" href="#">Social Media</a>
+        </p>
+        <a href="https://api.iconify.design/fa:facebook-official.svg?color=%231c71d8" class="text-white fs-4" style="font-style: bold;">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="text-white fs-4">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="text-white fs-4">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+      </ul>
+    </div>
+    
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
