--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 <!--carousel section-->
-<div class="mt-4 bg-dark">
+<div class="mt-4 bg-dark mx-4">
 <form action="">
   <div class="mb-3">
       <div class="container text-white fs-4 pt-3">      
