--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -58,7 +58,7 @@
       class="form-control fs-5 pl-5"
     />
   </div>
-  <button type="submit" class="btn btn-primary fs-5 bg-white text-dark">Search</button>
+  <button type="submit" class="btn btn-primary fs-5 bg-white text-black">Search</button>
 </form>
 <p>Searching for: {{ searchTerm }}</p>
 <div class="container text-white">
@@ -73,7 +73,7 @@
       loop:true
     });
   </script>
-
+<h3 class="container text-white bg-black">Action movies</h3>
 </div>
 <div class="row row-cols-1 row-cols-md-5 g-3">
   {% for movie in movies %}
@@ -82,11 +82,11 @@
         <img class="card-img-top" src="{{ movie.image.url }}" />
         <div class="card-body">
           <a href="{% url 'detail' movie.id %}">
-          <p class="card-title fw-bold link-primary">{{ movie.title }}</p>
+          <p class="card-title fw-bold link-primary ">{{ movie.title }}</p>
           </a>
           <p class="card-text">{{ movie.description }}</p>
           {% if movie.url %}
-          <a href="{{ movie.url }}" class="btn btn-primary"> Movie Link </a>
+          <a href="{{ movie.url }}" class="btn btn-primary bg-danger"> Movie Link </a>
           {% endif %}
         </div>
       </div>
