--- a/movie/templates/createreview.html
+++ b/movie/templates/createreview.html
@@ -2,16 +2,16 @@
 
 {% block content %}
 
-    <p>Thank you for adding a review we appreciate.</p>
+    <p>Thank you for adding a review, we appreciate.</p>
     <div class="card mb-3">
      <div class="row g-0">
      <div>
         <div class="card-body">
     <h5 class="card-title">Add Review for {{ movie.title }}</h5>
 
-{% if error %}
-    <div class="alert alert-danger mt-3"role="alert"> {{ error }} </div>
-{% endif %}
+    {% if error %}
+        <div class="alert alert-danger mt-3"role="alert"> {{ error }} </div>
+    {% endif %}
         <p class="card-text">
         <form method="POST">
          {% csrf_token %}
