--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -54,7 +54,7 @@
       placeholder="Please enter the title of the movie to search for ..."
       required
       name="searchMovie"
-      class="form-control fs-5 pl-5"
+      class="form-control fs-5 "
     />
   </div>
   <button type="submit" class="btn btn-primary fs-5 bg-white text-black">Search</button>
