--- a/accounts/templates/loginaccount.html
+++ b/accounts/templates/loginaccount.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="card mb-3">
+<br><br>
+<h5 class="container text-center text-dark">Please Login</h5>
+
+<div class="card mb-3 text-center container mt-5">
   <div class="row g-0">
     <div>
       <div class="card-body">
-        <h5 class="card-title">Login</h5>
         {% if error %}
         <div class="alert alert-danger mt-3" role="alert">
           {{ error }}
         </div>
         {% endif %}
         <p class="card-text">
-          <form method="POST">
+          <form method="POST" class="container form-control text-dark">
             {% csrf_token %}
           
             {{ form.as_p }}
