--- a/accounts/templates/signupaccount.html
+++ b/accounts/templates/signupaccount.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="bg-white pb-5 mb-5">
 <br><br>
 <div class="card mb-3 container pt-5">
   <div class="row g-0">
@@ -24,5 +24,7 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
 {% endblock content %}
