--- a/movie/templates/about.html
+++ b/movie/templates/about.html
@@ -4,16 +4,16 @@
 <!--carousel section-->
 
   {% load static %}
-
+<div class="bg-white">
 <!--carousel section-->
-<div class="container mt-5">
+<div class="container mt-5 ">
   <div class="about-page">
     <h1>About Mini Netflix  </h1>
     
-    <p>Welcome to <strong>Mini Netflix</strong>, your ultimate companion for discovering, rating, and sharing movie experiences! Whether you're a casual viewer or a dedicated cinephile, our platform is designed to make your movie-watching journey more engaging and enjoyable.</p>
+    <p class="container fs-5">Welcome to <strong>Mini Netflix</strong>, your ultimate companion for discovering, rating, and sharing movie experiences! Whether you're a casual viewer or a dedicated cinephile, our platform is designed to make your movie-watching journey more engaging and enjoyable.</p>
     
     <h2>Key Features:</h2>
-    <ul>
+    <ul class="container fs-5">
       <li><strong>Rate Movies:</strong> Easily rate any movie you've watched and see how your opinions compare to those of other users.</li>
       <li><strong>Watch Again Indicator:</strong> Indicate whether a movie is worth watching again, helping others decide if it’s a must-see or a one-time experience.</li>
       <li><strong>Personalized Recommendations:</strong> Based on your ratings and preferences, Movie Reviewer suggests new films you might enjoy, making it easier to find your next favorite movie.</li>
@@ -26,12 +26,11 @@
     </ul>
     
     <h2>Why Choose Movie Reviewer?</h2>
-    <p>At Movie Reviewer, we believe that every opinion counts. Our platform is designed to celebrate diverse perspectives, allowing you to see how your tastes align with the community. Whether you’re looking for a quick recommendation or want to dive deep into movie discussions, Movie Reviewer offers a rich, user-friendly experience tailored to your love for cinema.</p>
+    <p class="container fs-5">At Movie Reviewer, we believe that every opinion counts. Our platform is designed to celebrate diverse perspectives, allowing you to see how your tastes align with the community. Whether you’re looking for a quick recommendation or want to dive deep into movie discussions, Movie Reviewer offers a rich, user-friendly experience tailored to your love for cinema.</p>
     
     <p>Join our community today and start sharing your movie journey with others. Happy reviewing!</p>
   </div>
   
-
 </div>
-
+</div>
 {% endblock %}
