--- a/movie/templates/createreview.html
+++ b/movie/templates/createreview.html
@@ -12,7 +12,7 @@
     {% if error %}
         <div class="alert alert-danger mt-3"role="alert"> {{ error }} </div>
     {% endif %}
-        <p class="card-text">
+        <p class="card-text container text-center">
         <form method="POST">
          {% csrf_token %}
          {{ form.as_p }}
